[gd_scene load_steps=5 format=3 uid="uid://ljeb1qfapg02"]

[ext_resource type="Script" uid="uid://drpb77pny0s8j" path="res://Dialogs/MainMenu/main_menu_entry.gd" id="1_d3f6p"]
[ext_resource type="Texture2D" uid="uid://cxxi48tk2plt2" path="res://Textures/UI/Buttons/button_main_menu_entry.png" id="1_gnhps"]
[ext_resource type="Texture2D" uid="uid://8sr04wxsllbw" path="res://Textures/UI/Buttons/button_main_menu_entry_disabled.png" id="3_drwh8"]
[ext_resource type="Texture2D" uid="uid://dny0ut88xlr2q" path="res://Textures/UI/Buttons/button_main_menu_entry_focused.png" id="4_h7gnu"]

[node name="MainMenuEntry" type="MarginContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -64.0
offset_right = 256.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 2
script = ExtResource("1_d3f6p")
texture_normal = ExtResource("1_gnhps")
texture_disabled = ExtResource("3_drwh8")
texture_focused = ExtResource("4_h7gnu")

[node name="TextureButton" type="TextureButton" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("1_gnhps")
texture_disabled = ExtResource("3_drwh8")
texture_focused = ExtResource("4_h7gnu")

[node name="RichTextLabel" type="RichTextLabel" parent="TextureButton"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_type_variation = &"MainMenuRichTextLabel"
fit_content = true
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
